[package]
authors = ["Kornel <kornel@geekhood.net>", "Lode Vandevenne <lvandeve@gmail.com>"]
build = "build.rs"
license = "BSD-3-Clause"
name = "lodepng_unittest"
version = "0.1.0"

[build-dependencies]
cc = "1.0.0"
[dependencies.lodepng]
path = ".."

[dev-dependencies]
glob = "0.2.11"
png = "0.14.0"
rgb = "0.8.6"
