[package]
authors = ["Kornel <kornel@geekhood.net>", "Lode Vandevenne <lvandeve@gmail.com>"]
build = "build.rs"
license = "BSD-3-Clause"
name = "lodepng_unittest"
version = "0.1.0"
edition = "2018"

[build-dependencies]
cc = "1.0.72"

[dependencies.lodepng]
path = ".."
features = ["c_ffi"]

[dev-dependencies]
glob = "0.3.0"
png = "0.16.0"
rgb = "0.8.29"
