[package]
authors = ["Kornel <kornel@geekhood.net>", "Lode Vandevenne <lvandeve@gmail.com>"]
build = "build.rs"
license = "BSD-3-Clause"
name = "lodepng_unittest"
version = "0.2.0"
edition = "2021"
publish = false

[build-dependencies]
cc = { workspace = true }

[dependencies]
lodepng= { workspace = true, features = ["c_ffi"] }

[dev-dependencies]
glob = { workspace = true }
png = { workspace = true }
rgb = ">0.7, <0.9"
